syntax = "proto3";

package scalapb.e2e;

option (scalapb.options).lenses = false;

import "scalapb/scalapb.proto";

message NoLensesA {
  int32 a = 1;
}

message NoLenses {
  NoLensesA a = 1;
  int32 b = 2;
}
